--- a/assets/css/helpers/variables.scss
+++ b/assets/css/helpers/variables.scss
@@ -5,7 +5,7 @@ $skyblue: #D6FEFE;
 $donateBodyBlue: #2098d1;
 $HPBGgrey: linear-gradient(to right, #D4D3D3, #FDFCFC, #FDFCFC, #DBDADA);
 $orange: #FEB624;
-$lightGreen: #01FEA1;
-$green: #01FE55;
+$darkerGreen: #11fe00;
+$green: #8ffe00;
 $black: #000000;
 $navbarBlue: #007bff;
