--- a/assets/css/pages/charities.scss
+++ b/assets/css/pages/charities.scss
@@ -7,7 +7,7 @@
     color: white;
 }
 
-.charity1-text {
+.charity-text {
     padding: 0 18px;
     white-space: pre-line;
     max-height: 0;
@@ -17,7 +17,7 @@
     background-color: $white;
 }
 
-.charity-1-collapse:after {
+.charity-collapse:after {
     content: '\02795';
     font-size: 15px;
     float: right;
