--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -1,4 +1,4 @@
-.charity-1-collapse {
+.charity-collapse {
     width: 100%;
     font-size: 15px;
     background-color: $lightBlue;
@@ -7,17 +7,19 @@
     border: none;
 }
 
-.charity-1-collapse:hover {
+.charity-collapse:hover {
     background-color: $blue;
     transition: 0.2s ease-in-out;
 }
 
 .donateButtonStyle {
     background-color: $green;
+    margin-bottom: 10px;
     color: $white;
 }
 
 .donateButtonStyle:hover {
-    background-color: $lightGreen;
+    background-color: $darkerGreen;
+    transition: 0.2 ease-in-out;
     color: $white;
 }
