--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -12,34 +12,16 @@ $large-desktop-width: 1200px;
         }
 
         #hptextimg-1 {
-            @include box(47%,
-            156px);
-            left: 40px;
-            position: relative;
-            top: 24%;
-            z-index: 1;
-        }
-
-        #hptextimg-2 {
-            @include box(43%,
-            147px);
-            top: -166px;
-            position: relative;
-            z-index: 0;
-        }
-
-        #hptextimg-3 {
-            @include box(47%,
-            156px);
-            left: 40px;
+            @include box(350px,
+            185px);
             position: relative;
             top: 24%;
             z-index: 1;
         }
 
         #hptextimg-4 {
-            @include box(43%,
-            147px);
+            @include box(350px,
+            185px);
             top: -8%;
             position: relative;
             z-index: 0;
@@ -75,8 +57,8 @@ $large-desktop-width: 1200px;
         .MotherTeresaImg {
             @include box(32%,
             129px);
-            top: 1px;
-            left: 70%;
+            top: 94px;
+            left: 67%;
             border-radius: 20px;
         }
     }
@@ -88,18 +70,20 @@ $large-desktop-width: 1200px;
 @mixin tablet {
     @media (min-width: $tablet-width) {
         /*Homepage*/
-        #hptextimg-1 {
-            height: 239px;
-            top: 38%;
-            left: 72px;
-            position: relative;
+        .hpimg-2 {
+            width: 100%;
+            height: 900px;
         }
 
+        #hptextimg-1 {
+            height: 200px;
+            top: 330px;
+            left: 72px;
+        }
 
         #hptextimg-2 {
-            top: -53%;
-            height: 230px;
-            position: relative;
+            top: -56px;
+            height: 204px;
         }
 
         #hptextimg-3 {
@@ -123,6 +107,12 @@ $large-desktop-width: 1200px;
             font-size: 26px;
             margin-top: 5%;
             padding-right: 10px;
+            position: relative;
+        }
+
+        .section1 {
+            bottom: 20px;
+            padding-top: 10%;
             position: relative;
         }
 
@@ -169,6 +159,12 @@ $large-desktop-width: 1200px;
 @mixin large-desktop {
     @media (min-width: $large-desktop-width) {
         /*Homepage*/
+        .hpimg-2 {
+            width: 100%;
+            height: 900px;
+            top: 48px;
+        }
+
         #hptextimg-1 {
             height: 400px;
             top: 41%;
@@ -176,7 +172,7 @@ $large-desktop-width: 1200px;
         }
 
         #hptextimg-2 {
-            top: -50%;
+            top: -56%;
             height: 400px;
             position: relative;
         }
