--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -5,7 +5,7 @@ body {
 
 
 .section2 {
-        height: 770px;
+    height: 620px;
 }
 
 
@@ -59,12 +59,15 @@ body {
 }
 
 .donateButtonStyleHP {
-    height: 74px;
+    height: 70px;
     font-size: 35px;
-    opacity: 0.9;
+    opacity: 0.7;
+    border: solid #FFF;
+    border-radius: 10px;
     transition: 0.2s;
 }
 
 .donateButtonStyleHP:hover {
     opacity: 1;
+    border: solid #FFF;
 }
