Fixed some of the Vanilla Javascript and CSS for contact.html, donate.html and index.html. I improved the codes for the 'Read More' buttons, on the homepage, edited the first section of the hompage with Javascript to make it fade in, when it is opened, added color to the carousel buttons on donate.html and worked on the Email.JS codes to make it work in contact.html.

--- a/assets/css/helpers/helpers.scss
+++ b/assets/css/helpers/helpers.scss
@@ -164,3 +164,24 @@
     @extend %charityCarouselPics;
     background-image: url('../images/Charity-Images/Disaster-Relief-Red-Cross.jpg');
 }
+
+
+
+
+%carouselArrows {
+    height: 100px;
+    width: 100px;
+    outline: black;
+    background-color: rgba(0, 0, 0, 0.3);
+    background-size: 100%, 100%;
+    border-radius: 50%;
+}
+
+.carousel-control-prev-icon {
+    @extend %carouselArrows;
+}
+
+.carousel-control-next-icon {
+    @extend %carouselArrows;
+
+}
