--- a/assets/css/pages/contact.scss
+++ b/assets/css/pages/contact.scss
@@ -20,5 +20,5 @@
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    background-image: url('/assets/images/Contact-Image/Hands-Charity.png');
+    background-image: url('../images/Contact-Image/Hands-Charity.png');
 }
