--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -71,3 +71,12 @@ body {
     opacity: 1;
     border: solid #FFF;
 }
+
+.section2-text {
+    animation: fadeEffect 3s;
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
