Worked on the codes for the charts on the Statistics page and wrote more Vanilla Javascript codes for the Contact page and Homepage, in order to have more interactive effects.

--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -72,3 +72,14 @@ body {
     border: solid #FFF;
 }
 
+.text-effect {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: 0.5s all ease-in-out;
+} 
+
+.text-appear {
+    opacity: 1;
+    transform: translateY(0px)
+}
+
