--- a/assets/css/helpers/variables.scss
+++ b/assets/css/helpers/variables.scss
@@ -9,3 +9,6 @@ $darkerGreen: #11fe00;
 $green: #8ffe00;
 $black: #000000;
 $navbarBlue: #007bff;
+$lightYellow: #FEF9B4;
+$grey: rgb(224,224,224);
+$red: #FE7979;
