Included Vanilla JavaScript effects on the homepage, so that the sections appear on scroll.

--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -72,7 +72,7 @@ body {
     border: solid #FFF;
 }
 
-.text-effect {
+/*.text-effect {
     opacity: 0;
     transform: translateY(20px);
     transition: 0.5s all ease-in-out;
@@ -81,5 +81,4 @@ body {
 .text-appear {
     opacity: 1;
     transform: translateY(0px)
-}
-
+}*/
