--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,15 +277,16 @@ body {
   opacity: 1;
   border: solid #FFF; }
 
-.text-effect {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: 0.5s all ease-in-out; }
+/*.text-effect {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: 0.5s all ease-in-out;
+} 
 
 .text-appear {
-  opacity: 1;
-  transform: translateY(0px); }
-
+    opacity: 1;
+    transform: translateY(0px)
+}*/
 .chartText1 {
   margin-left: 10%; }
 
