Added the pie charts back to statistics.html.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@
   transition: 0.2s;
   color: #007bff !important; }
 
-#donateBody {
+#bodyColor {
   background-color: #2098d1; }
 
 .charitiesH1 {
