Edited the style of statistics.html and restructured some data in data.json.

--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -166,6 +166,15 @@ $large-desktop-width: 1200px;
         .section3 {
             height: 100%;
         }
+        
+        .chartText {
+            text-align: center;
+        }
+
+        .chartStyling {
+            background-color: #fff1cf;
+            margin: 0;
+        }
     }
 }
 
