--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,8 +287,9 @@ body {
     opacity: 1;
     transform: translateY(0px)
 }*/
-.chartText1 {
-  margin-left: 10%; }
+.chartText {
+  margin-left: 10%;
+  color: #FFFFFF; }
 
 #gdp-per-capita-chart {
   clear: left; }
@@ -449,7 +450,14 @@ body {
     top: -1%; }
 
   .section3 {
-    height: 100%; } }
+    height: 100%; }
+
+  .chartText {
+    text-align: center; }
+
+  .chartStyling {
+    background-color: #fff1cf;
+    margin: 0; } }
 @media (min-width: 1200px) {
   /*Homepage*/
   .hpimg-2 {
