Fixed the second pie-charts on statistics.js.

--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -172,7 +172,7 @@ $large-desktop-width: 1200px;
         }
 
         .chartStyling {
-            background-color: #fff1cf;
+            background-color: $white;
             margin: 0;
         }
     }
