--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,7 +456,7 @@ body {
     text-align: center; }
 
   .chartStyling {
-    background-color: #fff1cf;
+    background-color: #FFFFFF;
     margin: 0; } }
 @media (min-width: 1200px) {
   /*Homepage*/
