Redesigned statistics.html.

--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -175,6 +175,14 @@ $large-desktop-width: 1200px;
             background-color: $white;
             margin: 0;
         }
+        
+        .graph-color {
+            color: $black;
+        }
+        
+        .statisticsHeading {
+            color: $black;
+        }
     }
 }
 
